# vrp_solver

./: README.md  main.cpp  meson.build  vrp_solver.cpp
core/: core_model.cpp  core_model.hpp  cvrp_loader.cpp  cvrp_loader.hpp  cvrp_model.hpp  cvrp_solution_verifier.cpp  cvrp_solution_verifier.hpp  cvrp_solver_savings.cpp  cvrp_solver_savings.hpp  cvrp_solver_tabu.cpp  cvrp_solver_tabu.hpp
test_data/CVRP/Christofides et al. 1979 - CMT/: BKS.txt
test_data/CVRP/fisher/: BKS.txt
test_data/CVRP/golden/: BKS.txt
